Adding --add-exports and add-opens for tests.